<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical">

        <include
            android:id="@+id/id_include_top"
            layout="@layout/include_top_navigation"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/id_iv_update_pic"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="70dp"
                    android:src="@drawable/img_carepatch_simple"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:id="@+id/id_progressbar_download"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="255dp"
                        android:layout_height="4dp"
                        android:gravity="center_horizontal"
                        android:progressDrawable="@drawable/layerlist_update_firmware"/>

                    <TextView
                        android:id="@+id/tv_update_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/base"
                        android:gravity="center"
                        android:text=""/>
                </LinearLayout>

                <TextView
                    android:id="@+id/id_update_status"
                    style="@style/style_15sp_gray33"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:text="@string/string_updating_firware"/>

                <TextView
                    style="@style/style_15sp_gray33"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/string_update_starton"
                    android:textSize="13sp"/>

                <TextView
                    style="@style/style_15sp_gray33"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/string_update_power"
                    android:textSize="13sp"/>

                <TextView
                    style="@style/style_15sp_gray33"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/string_update_near_device"
                    android:textSize="13sp"/>

                <TextView
                    style="@style/style_15sp_gray33"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/string_please_keep_net_ok"
                    android:textSize="13sp"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>